feat: add JWT generator & JWT middleware
