# internal/infrastructure/repository/user_repository.go
@@ -1,6 +1,7 @@
 package repository
 
 import (
+	"context"
 	"fmt"
 	"veg-store-backend/injection/core"
 
@@ -20,30 +21,27 @@ func NewUserRepository() UserRepository {
 	return &userRepository{}
 }
 
+/*----------------------------------INJECTION--------------------------------------*/
+
 func (repository *userRepository) Name() string { return "UserRepository" }
 func (repository *userRepository) Start() error {
 	core.Logger.Debug(fmt.Sprintf("%s initialized", repository.Name()))
 	return nil
 }
 func (repository *userRepository) Stop() error {
-	core.Logger.Debug(fmt.Sprintf("%s initialized", repository.Name()))
+	core.Logger.Debug(fmt.Sprintf("%s destroyed", repository.Name()))
 	return nil
 }
 
-var UserRepositoryModule = fx.Options(fx.Provide(NewUserRepository))
+func RegisterUserRepository(lifecycle fx.Lifecycle, repository UserRepository) {
+	lifecycle.Append(fx.Hook{
+		OnStart: func(context context.Context) error {
+			return repository.Start()
+		},
+		OnStop: func(context context.Context) error {
+			return repository.Stop()
+		},
+	})
+}
 
-//func RegisterUserRepository(lifecycle fx.Lifecycle, repository UserRepository) {
-//	lifecycle.Append(fx.Hook{
-//		OnStart: func(context context.Context) error {
-//			return repository.Start()
-//		},
-//		OnStop: func(context context.Context) error {
-//			return repository.Stop()
-//		},
-//	})
-//}
-//
-//var UserRepositoryModule = fx.Options(
-//	fx.Provide(NewUserRepository),
-//	fx.Invoke(RegisterUserRepository),
-//)
+var UserRepositoryModule = fx.Options(fx.Provide(NewUserRepository), fx.Invoke(RegisterUserRepository))
